--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,4 +40,4 @@ jobs:
           sudo docker pull smit4297/paytm-clone:latest
           sudo docker stop web-app || true
           sudo docker rm web-app || true
-          sudo docker run -d --name web-app -p 3005:3000 smit4297/paytm-clone:latest
+          sudo docker run -e DATABASE_URL ${{ secrets.DATABASE_URL }} -d --name web-app -p 3005:3000 smit4297/paytm-clone:latest
